WikimediaUI theme: Fix regression on accelerator key alignment
Fixing regression introduced in I1c2795d3823 on accelerator key alignment
by staying with `display: table`. This itself might have side-effects in
certain browsers with `:focus` state but is the lesser of two evils.

Bug: T189925

--- a/src/themes/wikimediaui/tools.less
+++ b/src/themes/wikimediaui/tools.less
@@ -381,7 +381,6 @@
 	}
 
 	.oo-ui-tool-link {
-		display: block;
 		// Tool-Links in PopupToolGroups always have a `-title` element
 		padding: @padding-top-tool-label @padding-horizontal-base @padding-bottom-tool-label @padding-start-tool;
 
